Fix Home links on recipe pages.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -85,7 +85,7 @@
 
     <footer>
       <br />
-      <a href="/index.html">Home</a>
+      <a href="../index.html">Home</a>
     </footer>
   </body>
 </html>
