Revert "Fix Home links on recipe pages."
This reverts commit 6acc8249393972e570eaee047282ead3481db876.

--- a/recipes/hotdogs.html
+++ b/recipes/hotdogs.html
@@ -96,7 +96,7 @@
 
     <footer>
       <br />
-      <a href="../index.html">Home</a>
+      <a href="/index.html">Home</a>
     </footer>
   </body>
 </html>
